Stack nav captions, add extra safe-area bottom padding; update layout content padding to avoid overlap

--- a/Layout/MainLayout.razor.css
+++ b/Layout/MainLayout.razor.css
@@ -2,10 +2,6 @@
     position: relative;
     display: flex;
     flex-direction: column;
-.page {
-    position: relative;
-    display: flex;
-    flex-direction: column;
     padding-top: env(safe-area-inset-top, 0px);
 }
 
@@ -19,7 +15,7 @@ main {
 
 /* Ensure content has bottom padding to avoid being covered by the fixed bottom nav */
 .content {
-    padding-bottom: calc(56px + env(safe-area-inset-bottom, 0px));
+    padding-bottom: calc(96px + env(safe-area-inset-bottom, 0px));
 }
 
 @media (min-width: 641px) {
@@ -37,7 +33,6 @@ main {
     .content {
         padding-left: 2rem !important;
         padding-right: 1.5rem !important;
-        padding-bottom: calc(56px + env(safe-area-inset-bottom, 0px));
+        padding-bottom: calc(96px + env(safe-area-inset-bottom, 0px));
     }
-}
 }
